# kapi-django-portfolio

./: .gitignore  pyproject.toml
app/: views.py
polls/: apps.py  forms.py  models.py  urls.py  views.py
polls/templates/polls/: app.html  create.html  detail.html  index.html  results.html
portfolio/: settings.py  urls.py
shorturl/: apps.py  forms.py  models.py  urls.py  views.py
shorturl/templates/shorturl/: app.html  index.html  success.html
static/script/: main.js
tasks/: apps.py  models.py  urls.py  views.py
tasks/templates/tasks/: create.html  dash.html  detail.html  list.html
templates/: app.html  base.html  footer.html  header.html  index.html
weather/: apps.py  urls.py  views.py
weather/templates/weather/: app.html  index.html  weather.html
