[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kapi-django-portfolio"
version = "0.1.0"
description = "A Django portfolio project"
authors = [
    { name="Your Name", email="your.email@example.com" }
]
dependencies = [
    "Django>=5.1.3"
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"